// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should pass additional props to portaled element 1`] = `
<span>
  <div
    tabindex="-1"
  >
    <div>
      <div>
        <div
          class="components-popover components-animate__appear is-from-top is-from-center"
          data-x-axis="center"
          data-y-axis="bottom"
          role="tooltip"
          style="top: 0px; left: 0px;"
        >
          <div
            class="components-popover__content"
            tabindex="-1"
          >
            Hello
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`Popover should render content 1`] = `
<span>
  <div
    tabindex="-1"
  >
    <div>
      <div>
        <div
          class="components-popover components-animate__appear is-from-top is-from-center"
          data-x-axis="center"
          data-y-axis="bottom"
          style="top: 0px; left: 0px;"
        >
          <div
            class="components-popover__content"
            tabindex="-1"
          >
            Hello
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;
